--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul class="orderlist">
                 <li>Shop</li>
                 <li>Accessories</li>
-                <li>About</li>
+                <li>About us </li>
                 <li>Contact</li>
             </ul>
             <h1 id="heading"><i id="star" class="bi bi-star" style="color: rgb(9, 171, 9);">&nbsp;&nbsp;</i>LISTER</h1>
